# deepseek-eyes

./: .env.example  README.md  README_EN.md  pyproject.toml
deepseek_eyes/: __init__.py  clipboard.py  server.py
docs/: CLIENTS.md  INSTALL_PROMPT_CN.md  INSTALL_PROMPT_EN.md  OPENCODE.md  TROUBLESHOOTING.md
examples/: claude_code_settings.json  opencode.json  smoke_test.py
