[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek-eyes"
version = "1.0.0"
description = "给 DeepSeek 装上眼睛 — MCP Server + 通义千问VL, 剪贴板图片 → 视觉模型 → 文字描述 / Give DeepSeek the ability to see images via clipboard + Qwen-VL"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Shaohan He" }, { name = "Capetlevrai (original)" }]
keywords = ["mcp", "vision", "clipboard", "deepseek", "qwen-vl", "modelscope", "llm", "claude-code"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  "mcp>=1.0.0",
  "openai>=1.0.0",
  "aiofiles>=23.0.0",
  "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/290298661-pixel/deepseek-eyes"
Repository = "https://github.com/290298661-pixel/deepseek-eyes"
Issues = "https://github.com/290298661-pixel/deepseek-eyes/issues"

[project.scripts]
deepseek-eyes = "deepseek_eyes.server:run"

[tool.setuptools.packages.find]
include = ["deepseek_eyes*"]
exclude = ["examples*", "docs*", "tests*"]
